Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48332

[REG 4.8->5.5] Crash in example examples/network/http due to QProgressDialog being re-shown by its force timer handling

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.5.0
    • None
    •  d482a92858f181c76229dc977ee9c159ba36515f (qtbase/5.6, 5.11.2015, 5.6)

    Description

      • Launch example (with SSL built-in)
      • Press Download on the default URL https://...
      • SSL error box pops up showing certificate expiration errors
      • Press "Abort" on it
      • Note: QProgressDialog shows up again (surprise)
      • Press Cancel -> crash in HttpWindow due to accessing deleted QNetworkReply

      Related commits: "QProgressDialog: don't require setValue(0) to be called." 3c6f3336343735b266ec7291c077efd0e3ba0ea5 ( https://codereview.qt-project.org/#/c/72637/ ). The point is here that the force timer causes the dialog to be re-shown. This differs from Qt 4 at least, not sure if it is a bug or a feature?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dfaure_kdab David Faure
            kleint Friedemann Kleint
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes